syntax = "proto3"; 

package shippingservice_manager; 

service ShippingserviceManager {
    rpc ExtractMicroserviceData(MicroserviceDataRequest) returns (MicroserviceData); 
}

message MicroserviceDataRequest {}

message MicroserviceData {
    string microservice_name = 1; 
    string scaling_action = 2; 
    int32 desired_replicas = 3; 
    int32 current_replicas = 4; 
    int32 cpu_request = 5; 
    int32 max_replicas = 6;
    double cpu_percentage = 7; 
}
